@@ -138,6 +138,7 @@ source "package/dropbear/Config.in"
 source "package/ethtool/Config.in"
 source "package/haserl/Config.in"
 source "package/hostap/Config.in"
+source "package/hostapd/Config.in"
 source "package/ifplugd/Config.in"
 source "package/iperf/Config.in"
 source "package/iproute2/Config.in"
