@@ -1,6 +1,6 @@
 2010.02, Not yet released:
 
-	New packages: tcpreplay
+	New packages: tcpreplay, hostapd
 
 	Updated/fixed packages: autoconf, bind, binutils, busybox,
 	directfb, iw, libpcap, lighttpd, mesa, pcre, usbutils
@@ -10,6 +10,7 @@
 	#515: tcpreplay: new package
 	#553: Wrong DirectFB ps2mouse limitation
 	#559: mesa3d build fails
+	#739: New/updated hostapd package
 	#749: Bump usbutils package to version 0.86
 	#751: Kernel 2.6 snapshot fetch fail
 	#753: Bump lighttpd package to 1.4.25
